[project]
name = "tlog-scales"
dynamic = ["version"]
description = "Python tooling for tlog-tiles logs"
readme = "README.md"

authors = [
    { name = "Florian Larysch", email = "fl@n621.de" }
]
license = "Apache-2.0"

requires-python = ">=3.11"
dependencies = [
    "cryptography>=48.0.0",
    "requests>=2.34.2",
]

[project.urls]
"Homepage" = "https://github.com/florolf/tlog-scales"
"Bug Tracker" = "https://github.com/florolf/tlog-scales/issues"

[project.scripts]
tlog-tiles = "tlog_scales.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=6.0.0",
    "pytest-md-report>=0.8.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/tlog_scales/__about__.py"

[tool.ruff.lint]
ignore = ["E741"]
